--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@
     animation: fadeIn 0.5s linear;
     transition: all 1s linear;text-align: center;
     padding-block: 100px;
-    letter-spacing: 1px;
   }
 
 .tag h1 {
@@ -339,6 +338,7 @@
 
 #Works .overlay-text {
     color: rgb(255, 255, 255);
+    font-size:1.5rem;
     width: 100%;
     background: linear-gradient(90deg, black, rgb(255, 102, 0), black)
 }
