--- a/style.css
+++ b/style.css
@@ -8,24 +8,28 @@
 }
 
 
-#Home, #Contact {
+#Home,
+#Contact {
     height: 100vh;
 }
 
 
 .tag {
     animation: fadeIn 0.5s linear;
-    transition: all 1s linear;text-align: center;
+    transition: all 1s linear;
+    text-align: center;
     padding-block: 100px;
-  }
+}
 
 .tag h1 {
     font-size: 50px;
     font-weight: bolder;
 }
-.tag h2{
+
+.tag h2 {
     font-size: 40px;
 }
+
 /* Navbar */
 
 .navbar {
@@ -99,20 +103,20 @@
 
 .home img {
 
-    mix-blend-mode:hard-light;
-    filter: drop-shadow(5px 5px 15px rgb(156, 156, 3)) opacity(0.7);
+    mix-blend-mode: luminosity;
+    filter: drop-shadow(5px 5px 15px rgb(156, 156, 3)) opacity(0.8);
     padding: 5px;
-    background:rgb(245, 245, 171);
+    background: rgb(245, 245, 171);
     border: none;
     border-radius: 50%;
     height: 200px;
- 
+
 }
 
 .text1 {
 
     font-family: 'Sacramento', cursive;
-    font-size: 50pt;
+    font-size: 50px;
     font-weight: bolder;
     padding: 20px;
 }
@@ -134,10 +138,17 @@
     visibility: hidden;
     height: 0;
 }
+
 @keyframes fadeIn {
-    0% {opacity: 0;}
-    100%{opacity: 1;}
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
+
 /* <!-- My Journey --> */
 #Journey {
     height: auto;
@@ -338,11 +349,71 @@
 
 #Works .overlay-text {
     color: rgb(255, 255, 255);
-    font-size:1.5rem;
+    font-size: 1.5rem;
     width: 100%;
-    background: linear-gradient(90deg, black, rgb(255, 102, 0), black)
+    background: linear-gradient(-45deg, black, rgb(255, 102, 0), black);
+    background-size: 400% 400%;
+    animation: gradient 5s ease-in-out infinite;
 }
 
+/* contact */
+#Contact em,
+a {
+    font-size: small;
+    color: black;
+    text-decoration: none;
+}
+
+#Contact .row {
+    margin: auto;
+    padding-inline: 15px;
+    padding-block: 100px;
+
+}
+
+#Contact svg {
+    width: 50px;
+    height: 50px;
+}
+
+.flexbox {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 3px 4px 5px black;
+    outline: 2px solid black;
+    outline-offset: -15px;
+}
+
+.flexbox * {
+    margin-block: 20px;
+}
+
+.overlay {
+    width: 80%;
+}
+
+.overlay-text {
+    font-weight: bolder;
+    background: linear-gradient(-45deg, black, rgb(103, 103, 102), black);
+    background-size: 400% 400%;
+    color: white;
+    letter-spacing: 1px;
+    animation: gradient 5s ease-in-out infinite;
+}
+
+@keyframes gradient{
+    0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
 
 /* <!-- Footer --> */
 #Footer {
@@ -439,7 +510,7 @@
 
     .navbar .navlist li a {
         padding-inline: 8px;
-        font-size: 8pt;
+        font-size: 6.5pt;
     }
 
     /* Home */
@@ -504,6 +575,10 @@
     #Works .row * {
         padding: 0;
         margin: auto;
+    }
+
+    #Works .overlay-text {
+        font-size: 1rem;
     }
 
     /* Footer */
