--- a/style.css
+++ b/style.css
@@ -8,8 +8,7 @@
 }
 
 
-#Home,
-#Contact {
+#Home {
     height: 100vh;
 }
 
@@ -384,6 +383,7 @@ a {
     box-shadow: 3px 4px 5px black;
     outline: 2px solid black;
     outline-offset: -15px;
+    flex-shrink: 1;
 }
 
 .flexbox * {
@@ -492,7 +492,13 @@ a {
         width: 95%;
     }
 
-    /* Footer */
+    /* Contact */
+    #Contact .container{
+        width: 70%;
+    }
+    #Contact em{
+        font-size: 12px;
+    }
 
 }
 
@@ -580,7 +586,10 @@ a {
     #Works .overlay-text {
         font-size: 1rem;
     }
-
+/* Contact */
+    #Contact em{
+        font-size: 15px;
+    }
     /* Footer */
     #Footer {
         font-size: 10pt;
